<resources>
    <string name="app_name">BirthdayReminder</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_title">Register a new Account</string>
    <string name="sign_in_title">Welcome back!</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="birthdays">Birthdays</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="contact_me">Feedback</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="save">save</string>
    <string name="name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday_message_hint">Birthday message</string>
    <string name="birthday_detail">Edit this Birthday</string>
    <string name="search_hint">search</string>
    <string name="menu_filter">Filter</string>
    <string name="alphabetically">sort alphabetically</string>
    <string name="by_month">sort by month</string>
    <string name="enter_valid_email">Please enter a valid email!</string>
    <string name="enter_valid_password">Password should be at least 6 characters.</string>
    <string name="error">\"Error! \"</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="import_a_contact">Import a contact</string>
    <string name="archive">Archive</string>
    <string name="undo_snackbar_message">UNDO</string>
    <string name="birthday_archived">Birthday archived</string>
    <string name="cannot_be_blank">This can not be blank.</string>
    <string name="birthday_restored">Birthday Restored!</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_delete">Are you sure you want to permanently delete this birthday?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_everything_message">This will delete everything permanently.</string>
    <string name="notification_channel_description">Notification from BirthdayReminder</string>
    <string name="notif_body_text">Tap for detail</string>
    <string name="send">SEND SMS</string>
    <string name="notes">Notes</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_not_match">The passwords do not match</string>
    <string name="name_changed">Name changed!</string>
    <string name="email_sent">Email sent!</string>
    <string name="birthday_saved">Birthday saved!</string>
    <string name="verification_link_sent">Verification Link Sent to Your Email!</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="delete_account_warning">Are you sure? This is irreversible.</string>
    <string name="ok">Ok</string>
    <string-array name="languages">
        <item>EN</item>
        <item>FR</item>
        <item>HINDI</item>
    </string-array>
    <string name="reenter_password">Reenter Password</string>
</resources>