<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/birthdayListFragment"
            android:title="@string/birthdays"
            android:icon="@drawable/ic_birthday">
        </item>
        <item
            android:id="@+id/anniversaryListFragment"
            android:title="@string/anniversaries"
            android:icon="@drawable/ic_gift">
        </item>
    </group>

    <group android:id="@+id/others">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email"
            android:title="@string/contact_me" />
    </group>
</menu>