<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reenter_password"
            android:textColor="@color/textColorSecondary"
            style="@style/TextAppearance.AppCompat.Title"/>

       <EditText
           android:id="@+id/confirm_password"
           android:hint="@string/password_hint"
           android:inputType="textPassword"
           android:textColor="@color/textColorSecondary"
           android:textColorHint="@color/textColorSecondary"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_password_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.cardview.widget.CardView>